@@ -484,6 +484,9 @@ PHP 8.4 UPGRADE NOTES
   . LDAP_OPT_X_TLS_PROTOCOL_MAX.
   . LDAP_OPT_X_TLS_PROTOCOL_TLS1_3.
 
+- LibXML:
+  . LIBXML_RECOVER.
+
 - OpenSSL:
   . X509_PURPOSE_OCSP_HELPER.
   . X509_PURPOSE_TIMESTAMP_SIGN.
